# scratch

./: .gitignore  CLAUDE.md  README.md  mcp.json  package-lock.json  package.json  vite.config.ts
plugins/: daily-journal.md  daily-journal.yaml  github-issue-sync.md  github-issue-sync.yaml  quick-capture.md  quick-capture.yaml
product/E-0003-scratch-v2/: README.md  Scratch v2 Roadmap.md
product/E-0003-scratch-v2/stories/: S-0003-01.md  S-0003-02.md  S-0003-03.md  S-0003-04.md  S-0003-05.md  S-0003-06.md  S-0003-07.md  S-0003-08.md  S-0003-09.md  S-0003-10.md  S-0003-11.md  S-0003-12.md  S-0003-13.md  S-0003-14.md  S-0003-15.md
product/E-0004-scratch-v3/: Scratch v3 Roadmap.md
product/E-0004-scratch-v3/stories/: S-0004-01.md  S-0004-02.md  S-0004-03.md  S-0004-04.md  S-0004-05.md  S-0004-06.md  S-0004-07.md  S-0004-08.md  S-0004-09.md  S-0004-10.md  S-0004-11.md  S-0004-12.md  S-0004-13.md  S-0004-14.md  S-0004-15.md  S-0004-16.md
scripts/: scratch-mcp-stdio.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  mcp.rs  mcp_instructions.md  plugins.rs  stories.rs  webhooks.rs
src/components/command-palette/: CommandPalette.tsx
src/components/editor/: BacklinksPanel.tsx  BookmarkBlock.tsx  Callout.tsx  (+17 more)
src/context/: NotesContext.tsx  ThemeContext.tsx
src/lib/: bookmark.ts  callout.ts  columns.ts  databaseRef.ts  equation.ts  frontmatter.ts  noteMeta.ts  svg.ts  wikilink.ts
src/services/: database.ts  notes.ts  templates.ts
src/types/: database.ts  note.ts
(+15 files in other folders)
