[package]
name = "Scratch"
version = "0.4.0"
description = "An offline markdown-based notes app"
authors = ["erictli"]
edition = "2021"

[lib]
name = "scratch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "6"
tantivy = "0.22"
tokio = { version = "1", features = ["fs", "sync", "rt", "net", "macros", "process", "io-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"
url = "2"
open = "5"
regex = "1"
chrono = "0.4"
serde_yaml = "0.9"
zip = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
tauri-plugin-deep-link = "2"
